--- a/calc.html
+++ b/calc.html
@@ -34,7 +34,9 @@
         <button type="submit" id="boton" class="btn btn-primary mx-4">Iniciar</button>  
       </div>
     </div>
-    <table id="tabla" class="table-stripped table table-bordered"></table>
+    <div class="container bg-light text-center p-2">
+      <table id="tabla" class="table-stripped table table-bordered"></table>
+    </div>
   </body>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
